--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "underscore.getSet",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Underscore plugin that implement Lodash _.get and _.set",
   "keywords": [
     "underscore",
@@ -19,10 +19,8 @@
     "type": "git",
     "url": "https://github.com/clementprevot/underscore.getSet.git"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "engines": {
     "node": ">4.0.0",
     "npm": ">3"
