--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/clementprevot/underscore.getSet.git"
   },
   "authors": [
-    "Clément PREVOT <clementp@lumapps.com>"
+    "Clément Prévot <clement.prevot@gmail.com>"
   ],
   "keywords": [
     "underscore",
